# slate_quantum

./: .gitignore  README.md  cspell.json  pyproject.toml
.devcontainer/: devcontainer-lock.json  devcontainer.json
.github/workflows/: deploy.yml  test.yml
docs/source/: conf.py  index.rst
examples/: blochs_theorem.py  caldeira_leggett.ipynb  caldeira_leggett.py  eigenstates.py  harmonic_langevin.ipynb  operator.py  potential.ipynb  potential.py  schrodinger.py  state.py  temp.py  test.py
examples/dynamics/: caldeira_leggett.ipynb  caldeira_leggett_energy.ipynb  caldeira_leggett_positions.ipynb  caldeira_leggett_width.ipynb  harmonic_langevin.ipynb
examples/noise/: noise_kernel.py  noise_operators.py  temperature_correction.py
slate_quantum/: __init__.py
slate_quantum/_util/: __init__.py  _prod.py  legacy.py
slate_quantum/bloch/: __init__.py  _block_diagonal_basis.py  _linalg.py  _shifted_basis.py  _transposed_basis.py  basis.py  build.py
slate_quantum/dynamics/: __init__.py  _realization.py  caldeira_leggett.py  harmonic_langevin.py  periodic_calderia_leggett.py  schrodinger.py  stochastic_schrodinger.py  stochastic_shcrodinger.py
slate_quantum/dynamics/caldeira_leggett/: __init__.py  _periodic.py  _standard.py  _util.py
slate_quantum/dynamics/langevin/: __init__.py  _double_harmonic.py  _harmonic.py  _periodic.py  _util.py
slate_quantum/metadata/: __init__.py  _label.py  _repeat.py
slate_quantum/model/: __init__.py  _label.py
slate_quantum/model/operator/: __init__.py  _diagonal.py  _linalg.py  _operator.py  _potential.py  _super_operator.py  build.py  linalg.py
slate_quantum/model/operator/potential/: __init__.py  _build.py  _potential.py  build.py
slate_quantum/model/state/: __init__.py  _state.py  eigenstate_basis.py
slate_quantum/noise/: __init__.py  _build.py  _caldeira_leggett.py  _kernel.py  build.py  gaussian.py  kernel.py  legacy.py  lorentzian.py  sample.py
slate_quantum/noise/diagonalization/: _eigenvalue.py  _fft.py  _taylor.py
slate_quantum/noise/diagonalize/: __init__.py  _eigenvalue.py  _fft.py  _taylor.py
slate_quantum/operator/: __init__.py  _diagonal.py  _linalg.py  _measure.py  _operator.py  _super_operator.py  linalg.py
slate_quantum/operator/_build/: __init__.py  _caldeira_leggett.py  _hamiltonian.py  _ladder.py  _momentum.py  _position.py  _potential.py
slate_quantum/state/: __init__.py  _basis.py  _build.py  _state.py  _state_list_basis.py
slate_quantum/util/: __init__.py
slate_quantum/wannier/: __init__.py  _localization_operator.py  _operator.py  _projection.py  _tight_binding.py  _wannier90.py  _wannier90_new.py
tests/: test_bloch.py  test_measure.py  test_operator.py  test_state.py
